--- a/package.json
+++ b/package.json
@@ -7,6 +7,11 @@
     "@babylonjs/gui": "^5.23.0",
     "@babylonjs/loaders": "^5.23.0",
     "@babylonjs/procedural-textures": "^5.25.0",
+    "@emotion/react": "^11.10.4",
+    "@emotion/styled": "^11.10.4",
+    "@material/button": "^14.0.0",
+    "@mui/icons-material": "^5.10.6",
+    "@mui/material": "^5.10.7",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -18,6 +23,7 @@
     "react": "^18.2.0",
     "react-babylonjs": "^3.1.11",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.4.1",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
